--- a/ObligatoriskOpgave/app/src/main/res/values/strings.xml
+++ b/ObligatoriskOpgave/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ObligatoriskOpgave</string>
-    <string name="login"></string>
+    <string name="login"> Login </string>
+    <string name="Reservation"> Reservation </string>
+    <string name="AddReservation"> Add Reservation </string>
 </resources>
