--- a/ObligatoriskOpgave/app/src/main/res/values/strings.xml
+++ b/ObligatoriskOpgave/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="FromTime"> From Time </string>
     <string name="ToTime"> To Time </string>
     <string name="Purpose"> Purpose </string>
+    <string name="signOut">Sign out</string>
+
 </resources>
